[package]
name = "bdk_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
rocket = {version="0.5.0-rc.1", features=["json"]}
tokio = { version = "1.9.0", features = ["full"] }
bdk = { version = "^0.9.0", default-features = false, features = ["all-keys"]}
serde = "1.0"